[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "ha-media-watchdog"
dynamic = ["version"]
description = "Script to watch media in HmoeAssistant"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "homeassistant-api>=4.2.2.post2",
    "pyyaml>=6.0.2",
    "rv-script-utils>=0.1.0",
]
license = {file = "LICENSE"}
keywords = ["homeassistant"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]

[project.scripts]
ha-media-watchdog = "ha_watchdog_libs:main_cli"

[project.urls]
Homepage = "https://github.com/rveachkc/ha-media-watchdog"

[tool.uv]
dev-dependencies = [
    "freezegun>=1.5.1",
    "pytest>=8.3.3",
    "ruff>=0.7.3",
]

[tool.pytest.ini_options]
pythonpath = [
  "src/"
]
addopts = "-ra -q"
testpaths = [
    "tests",
]

[tool.ruff.lint]
extend-select = ["I"]

[tool.setuptools_scm]
local_scheme = "no-local-version"
